Fixed createlisting css and made mark listing as sold button more visible

--- a/491A/src/app/protected/selling/selling.component.scss
+++ b/491A/src/app/protected/selling/selling.component.scss
@@ -80,3 +80,11 @@ font-size: 3em;
   z-index: 3; /* Ensure the "Sold" text is above other elements */
 }
 
+mat-icon.icon{
+  background-color: white;
+  padding: 4px; 
+  border: 1px solid black;
+  border-radius: 5%;
+  margin-top: -9px; 
+  margin-right: -8px; 
+}
